# chat_with_docs

./: .flake8  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  EVALUATION_SYSTEM.md  Makefile  README.md  REFACTORING_SUMMARY.md  docker-compose.yml  package-lock.json  package.json  run-ci-local.sh  run_e2e_rag_demo.sh
.cursor/rules/: clerk-for-next.mdc
.github/scripts/: setup-ci.sh
.github/workflows/: README.md  auto-fix.yml  backend-ci.yml  ci.yml  dependency-review.yml  frontend-ci.yml
.roo/rules/: dev_workflow.md  self_improve.md  taskmaster.md
backend/: .env.test  API_INTEGRATION_GUIDE.md  Dockerfile  LANGCHAIN_CONFIG.md  LANGCHAIN_TESTING.md  Makefile  README.md  TIKTOKEN_COMPATIBILITY.md  create_tables.py  pyproject.toml  requirements-e2e-test.txt
backend/.cursor/rules/: python-best-practices.mdc  python-fastapi-api.mdc
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: auth.py  chat.py  documents.py
backend/app/core/: error_handler.py  error_reporter.py  exceptions.py  ingestion.py  langchain_config.py  logger_config.py  logging_config.py  prompts.py  qna.py  rag_pipeline.py  settings.py  vectorstore.py
backend/app/models/: __init__.py  database.py  hierarchy_models.py  langchain_models.py  schemas.py
backend/app/services/: document_parser.py  document_processor.py  embedding_service.py  enhanced_document_service.py  enhanced_vectorstore.py  hierarchical_chunker.py  langchain_document_processor.py  langchain_document_processor_refactored.py  langchain_imports.py  langchain_pipeline.py  metadata_repository.py  supabase_file_service.py  text_chunker.py
backend/app/services/document_loaders/: __init__.py  base_loader.py  pdf_loader.py  text_loader.py  word_loader.py
backend/app/services/document_splitters/: __init__.py  document_splitter.py
backend/app/services/document_structure_detector/: __init__.py  data_models.py  heading_detector.py  numbering_systems.py  pattern_handlers.py  structure_detector.py
backend/app/services/document_transformers/: __init__.py  document_transformer.py  markdown_html_cleaner.py
backend/app/services/layout_tree/: __init__.py  layout_tree.py  metadata_manager.py  tree_builder.py  tree_node.py
backend/app/utils/: chunk_visualizer.py  clerk_auth.py  encoding_utils.py  pdf_utils.py  security.py  token_counter.py
backend/docs/: post-mvp-error-handling.md
backend/examples/: langchain_document_example.py
backend/tests/: conftest.py  test_api.py  test_api_documents.py  test_comprehensive_integration.py  test_data_models.py  test_document_parser.py  test_document_processor.py  test_document_structure_detector.py  test_enhanced_langchain_models.py  test_enhanced_vectorstore.py  test_error_handling_and_logging.py  test_exception_handling.py  test_heading_detector.py  test_hierarchical_chunker.py  test_hierarchy_models.py  test_ingestion.py  test_integration_rag_pipeline.py  test_langchain_config.py  test_langchain_document_processor.py  test_langchain_utilities.py  test_layout_tree.py  test_local_rag_run.py  test_numbering_systems.py  test_pattern_handlers.py  test_performance_benchmarks.py  test_prompts.py  test_qna.py  test_rag_pipeline.py  test_real_openai_integration.py  test_supabase_file_service.py  test_text_chunker.py  test_token_counter.py
eval/: README.md  run_evaluation.sh
eval/docs/: README.md  evaluation_guide.md
eval/scripts/: evaluate_rag.py  fix_character_positions.py  fixed_sample_benchmark.json  run_evaluation.sh  setup_legalbench_data.py
eval/services/: __init__.py  evaluation_service.py
frontend/: .env.local.example  .env.test  .eslintrc.json  README.md  build-check.sh  jsconfig.json  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/.cursor/: mcp.json
frontend/.cursor/rules/: cursor_rules.mdc
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: ChatWindow.tsx  CitationViewer.tsx  DocumentList.tsx  Layout.tsx  MessageBubble.tsx  UploadForm.tsx
frontend/lib/: api.ts  index.ts
frontend/src/components/: ChatHistory.tsx  ChatInterface.tsx  DocumentLibrary.tsx  DocumentTable.tsx  DocumentUpload.tsx  LandingPage.tsx  MessageBubble.tsx
frontend/src/context/: AppContext.tsx  ErrorContext.tsx  ToastContext.tsx
frontend/src/hooks/: useChatHistory.ts  useDocuments.ts
frontend/src/lib/: api.ts  env-validation.ts  errorHandler.ts
frontend/src/services/: uploadApi.ts
frontend/src/test/: api.test.ts  chat.test.tsx  env-validation.test.ts  errorHandler.test.ts  setup.ts  uploadApi.test.ts  useDocuments.test.ts  utils.ts
frontend/src/types/: index.ts
new-frontend/: package.json  prd.md
new-frontend/.taskmaster/: config.json  state.json
new-frontend/.taskmaster/reports/: task-complexity-report.json
new-frontend/app/: layout.tsx  page.tsx
new-frontend/app/chat/: page.tsx
scripts/: prd.txt  task-complexity-report.json
setup/: backend_setup.sh  frontend_setup.sh  init_project.sh  setup.sh
(+22 files in other folders)
