[project]
name = "chat-with-docs-backend"
version = "1.0.0"
description = "RAG-powered document Q&A API"
authors = [{ name = "Fauzi Hussein", email = "wumpini.hussein@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic[email]>=2.5.3",
  "pydantic-settings>=2.1.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.6",
  "sqlalchemy>=2.0.25",
  "psycopg2-binary>=2.9.9",
  "pgvector>=0.2.4",
  "openai>=1.9.0",
  "langchain>=0.3.0",
  "langchain-openai[azure]>=0.2.0",
  "pypdf>=3.17.4",
  "pdfplumber>=0.11.0",
  "python-docx>=1.1.0",
  "tiktoken>=0.9.0",
  # dev & test
  "pytest>=7.4.4",
  "pytest-cov>=4.1.0",
  "httpx>=0.26.0",
  "pre-commit>=4.2.0",
  "black>=25.1.0",
  "isort>=6.0.1",
  "flake8>=7.2.0",
  "mypy>=1.15.0",
  "autoflake>=2.3.1",
  "autopep8>=2.3.1",
  "email-validator>=2.2.0",
  "langchain-community>=0.3.24",
  "chardet>=5.2.0",
  "passlib>=1.7.4",
]

[tool.uv]
# optional uv configuration

# Lockfile is uv.lock

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 150
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = ["pytest-asyncio>=1.0.0"]
