[project]
name = "chat-with-docs-backend"
version = "1.0.0"
description = "RAG-powered document Q&A API"
authors = [{ name = "Fauzi Hussein", email = "wumpini.hussein@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "uvicorn[standard]>=0.27.0",
  "pydantic-settings>=2.1.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.6",
  "psycopg2-binary>=2.9.9",
  "pgvector>=0.2.4",
  "openai>=1.9.0",
  "langchain>=0.3.0",
  "langchain-openai[azure]>=0.2.0",
  "pypdf>=3.17.4",
  "pdfplumber>=0.11.0",
  "python-docx>=1.1.0",
  "tiktoken>=0.9.0",
  "beautifulsoup4>=4.12.0",
  # dev & test
  "pytest>=7.4.4",
  "pytest-cov>=4.1.0",
  "httpx>=0.26.0",
  "pre-commit>=4.2.0",
  "email-validator>=2.2.0",
  "langchain-community>=0.3.24",
  "chardet>=5.2.0",
  "passlib>=1.7.4",
  # Make sure you update the values of these dependencies in the .pre-commit-config.yaml file as well to the exact versions
  "fastapi==0.115.13",
  "pydantic[email]==2.11.7",
  "sqlalchemy==2.0.41",
  "ruff==0.12.0",
  "mypy==1.16.1",
  # end of dependencies you need to update in .pre-commit-config.yaml file
  "websockets>=13.0",
  "supabase>=2.17.0",
  "pytest-mock>=3.14.1",
  "psutil>=7.0.0",
]

[tool.uv]
# optional uv configuration

# Lockfile is uv.lock

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E203", # whitespace before ':' (conflicts with black/ruff formatter)
  "E501", # line too long
  "B008", # do not perform function calls in argument defaults (FastAPI Depends)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = ["pytest-asyncio>=1.0.0"]
